fix: remove a large spacing after the content field

--- a/resources/ts/components/ContentField/styles.scss
+++ b/resources/ts/components/ContentField/styles.scss
@@ -32,4 +32,8 @@
 
 .fau-content-field .editor-styles-wrapper {
 	padding-bottom: unset !important;
+
+	&::after {
+		height: unset;
+	}
 }
